removed duplicate calls to create OPENSPACES_JARS
svn path=/trunk/openspaces/; revision=14412


Former-commit-id: 9e1aa490d6487768da2a913265fdf5e81006acfb