@@ -20,8 +20,8 @@
 @rem JAVA_VM - The java arg specifying the JVM to run.  (i.e. 
 @rem              -server, -hotspot, -jrocket etc.)
 @rem
-@rem JSHOMEDIR
-@rem            - The GigaSpaces home directory.
+@rem JSHOMEDIR - The GigaSpaces home directory.
+@rem            
 @rem POLICY - The default security policy file.
 @rem PRODUCTION_MODE
 @rem            - Indicates if GigaSpaces Server will be started in Production
@@ -32,10 +32,8 @@
 @rem
 @rem NIC_ADDR 	  - The Network Interface card IP Address
 @rem 
-@rem GS_JINI_START_CLASSPATH - The jars needed for starting the gsServer instance.
-@rem
 @rem  For additional information, refer to the GigaSpaces OnLine Documentation
-@rem  at http://www.gigaspaces.com/docs.htm
+@rem  at http://www.gigaspaces.com/wiki/display/GS/System+Environment
 @rem *************************************************************************
 @echo off
 
@@ -104,6 +102,26 @@ goto continue
 @rem more available options:  -Xgcprio:pausetime -XpauseTarget=200ms
 set JAVA_OPTIONS= -server -showversion -Xmx512m -Xgcprio:throughput
 goto continue
+
+rem The following parameters have been found optimal when using Solaris 10 on Sun CoolThreads Servers T1000/T2000 (Niagara) 
+rem during extensive tests, using Sun JVM 1.5.0_06 and JVM 6.
+rem In order to apply these VM switches, please add them to the JAVA_OPTIONS variable:
+
+rem Optimal performance has been achieved with 2GB heap, it should be adjusted to real RAM size
+rem -Xms2g �Xmx2g
+rem -XX:+UseParallelOldGC
+rem GC Threads quantity is, by default, equal to quantity of CPUs; 
+rem On single/dual CPU systems recommended to be set as 4 - 8
+rem -XX:ParallelGCThreads=32
+
+rem Bundle of JVM options planned as default for upcoming release. 
+rem Provides boost about 7-8%.
+rem -XX:+AggressiveOpts
+rem -XX:NewRatio=2                  
+rem -XX:SurvivorRatio=32 
+rem -XX:MaxTenuringThreshold=4
+rem Relevant to Solaris 10
+rem -XX:LargePageSizeInBytes=256m
 
 :sun
 if "%PRODUCTION_MODE%" == "true" goto sun_prod_mode
@@ -174,16 +192,19 @@ set LCP=.
 for %%i in ("%JSHOMEDIR%\lib\ext\*.*") do call %JSHOMEDIR%\bin\lcp %%i
 set EXT_JARS=%LCP%
 
+set LCP=.
+for %%i in ("%JSHOMEDIR%\lib\openspaces\*.*") do call %JSHOMEDIR%\bin\lcp %%i
+set OPENSPACES_JARS=%LCP%
+
 rem the GS_JARS contains the same list as defined in the Class-Path entry of the JSpaces.jar manifest file.
 rem These jars are required for client application and starting a Space from within your application.
-rem Note - Do not set the GS_JARS variable together with the GS_JINI_START_CLASSPATH variable (which is used only for the ServiceStarter).
-set GS_JARS=%EXT_JARS%;%JSHOMEDIR%;%JSHOMEDIR%/lib/JSpaces.jar;%JSHOMEDIR%/lib/jini/jsk-platform.jar;%JSHOMEDIR%/lib/jini/jsk-lib.jar;%JSHOMEDIR%/lib/jini/start.jar;%JSHOMEDIR%/lib/common/backport-util-concurrent.jar;%JSHOMEDIR%/lib/ServiceGrid/gs-lib.jar
+set GS_JARS=%EXT_JARS%;%JSHOMEDIR%;%JSHOMEDIR%/lib/JSpaces.jar;%JSHOMEDIR%/lib/jini/jsk-platform.jar;%JSHOMEDIR%/lib/jini/jsk-lib.jar;%JSHOMEDIR%/lib/jini/start.jar;%JSHOMEDIR%/lib/common/backport-util-concurrent.jar;%JSHOMEDIR%/lib/ServiceGrid/gs-lib.jar;%JSHOMEDIR%/lib/ServiceGrid/gs-boot.jar
 
 set PLATFORM_VERSION=6.0
 set POLICY=%JSHOMEDIR%\policy\policy.all
 
 if "%LOOKUPGROUPS%" == ""  (
-set LOOKUPGROUPS="gigaspaces-%USERNAME%"
+set LOOKUPGROUPS="gigaspaces-6.0EE"
 )
 set LOOKUP_GROUPS_PROP=-Dcom.gs.jini_lus.groups=%LOOKUPGROUPS%
 
@@ -204,11 +225,8 @@ rem Note: In a setup for Multi Network-Interface cards please append -Djava.rmi.
 rem with proper network-interface IP address to the RMI_OPTIONS
 set RMI_OPTIONS=-Dsun.rmi.dgc.client.gcInterval=600000 -Dsun.rmi.dgc.server.gcInterval=600000 -Djava.rmi.server.RMIClassLoaderSpi=default -Djava.rmi.server.logCalls=false
 
-rem Note - Do not set the GS_JARS variable together with the GS_JINI_START_CLASSPATH variable (which is used only for the ServiceStarter).
-set GS_JINI_START_CLASSPATH=%EXT_JARS%;%JSHOMEDIR%;%JSHOMEDIR%/lib/jini/start.jar;%JSHOMEDIR%/lib/ServiceGrid/gs-lib.jar
-
 rem For remote Eclipse debugging add the "%ECLIPSE_REMOTE_DEBUG%" variable to the command line:
-set ECLIPSE_REMOTE_DEBUG=-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8000
+set ECLIPSE_REMOTE_DEBUG=-Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y
 
 rem Set and add the system property -Djava.util.logging.config.file to the command line. It indicates file path to 
 rem the Java logging file location. Use it to enable finest logging troubleshooting of various Jini Services and GS modules.
@@ -238,8 +256,6 @@ if "%VERBOSE%"=="true" (
 	echo RMI_OPTIONS: %RMI_OPTIONS%
 	echo.
 	echo GS_JARS: %GS_JARS%
-	echo.
-	echo GS_JINI_START_CLASSPATH: %GS_JINI_START_CLASSPATH%
 	echo.
 	echo LOOKUPGROUPS: %LOOKUPGROUPS%  LOOKUPLOCATORS: %LOOKUPLOCATORS%
 	echo.
